feat: stream direct-play media
